--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
       <version>2.2</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+    </dependency>
   </dependencies>
 
   <build>
